Cadastro da loja Avivah

--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-    <form action="">
+    <form method="POST" action="../backend/register.php">
         <div id="pessoal">
-            <input type="text" placeholder="Nome" name="name"> 
+            <input type="text" name="name"> 
             <input type="radio" value="Sexo">
             <input type="radio" value="Sexo">
             <input type="radio" value="Sexo">
@@ -20,31 +20,31 @@
         </div>    
 
         <div id="enderecos">
-            <input type="text" placeholder="Nacionalidade" name="nacionality">
-            <input type="text" placeholder="CEP" name="CEP">
-            <input type="text" placeholder="Estado" name="state">
-            <input type="text" placeholder="Cidade" name="city">
-            <input type="text" placeholder="Bairro" name="district">
+            <input type="text" name="nacionality">
+            <input type="text" name="CEP">
+            <input type="text" name="state">
+            <input type="text" name="city">
+            <input type="text" name="district">
             <input type="number" value="Numero">
-            <input type="text" placeholder="Complemento" name="complement">
+            <input type="text" name="complement">
             <input type="number" value="CPF">
         </div>
 
         <div id="contatos">
-            <input type="text" placeholder="Telefone" name="telephone1">
-            <input type="text" placeholder="Telefone secundário" name="telephone2">
-            <input type="text" placeholder="Celular" name="cel1">
-            <input type="text" placeholder="Celular secundário" name="cel2">
-            <input type="text" placeholder="Email" name="email1">
-            <input type="text" placeholder="Email secundário" name="email2">
+            <input type="text" name="telephone1">
+            <input type="text" name="telephone2">
+            <input type="text" name="cel1">
+            <input type="text" name="cel2">
+            <input type="text" name="email1">
+            <input type="text" name="email2">
         </div>
 
         <div>
-            <input type="text" placeholder="Usuário" name="user">
-            <input type="password" placeholder="Senha" name="password">
+            <input type="text" name="user">
+            <input type="password" name="password">
         </div>
 
-        <input type="submit" value="Concluir">
+        <input type="submit" value="cadastrar" name="cadastrar">
 
     </form>
 
