--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>  
     
-    <form name="loginform" method="post" action="../backend/auth.php">
+    <form name="loginform" method="POST" action="../backend/auth.php">
         <div id="caixa">
              <br><h1>Faça seu login na Avivah</h1><br>
             <input type="text" placeholder="Usuário" name="user"><br>
