Página de cadastro

--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -5,6 +5,7 @@
 <!--     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
+    <link rel="stylesheet" href="css/stylecad.css">
     <title>Cadastro Avivah</title>
 </head>
 <body>
@@ -15,8 +16,8 @@
             <input type="radio" value="Masculino" id="Masculino" name="sexo"><label for = "Masculino">Masculino</label>
             <input type="radio" value="Feminino" id="Feminino" name="sexo"><label for="Feminino">Feminino</label>
             <input type="radio" value="Outro" id="Outro" name="sexo"><label for = "Outro">Outro</label>
-            <input type="select" value="Estado Civil"><br>
-            <input type="date" value="Data de Nascimento"><br>
+            <input type="select" name="estadocivil" value="Estado Civil"><br>
+            <input type="date" name="datanasc" value="Data de Nascimento"><br>
         </div>    
 
         <div id="enderecos">
