Página de cadastro

--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -16,31 +16,24 @@
             <input type="radio" value="Masculino" id="Masculino" name="sexo"><label for = "Masculino">Masculino</label>
             <input type="radio" value="Feminino" id="Feminino" name="sexo"><label for="Feminino">Feminino</label>
             <input type="radio" value="Outro" id="Outro" name="sexo"><label for = "Outro">Outro</label>
-            <select name="estado civil" id="estacivil" form="Estado Civil">
-                <option value="estado" selected>Estado Civil</option>
-                <option value="casado">Casado</option>
-                <option value="solteiro">Solteiro</option>
-                <option value="amasiado">Amasiado</option>
-                <option value="viuvo">Viúvo</option>
-                <option value="divorciado">Divorciado</option>
-            </select>
-            <input type="date" value="Data de Nascimento"><br>
+            <input type="date" name="nascimento" value="Data de Nascimento"><br>
         </div>    
 
         <div id="enderecos">
             <input type="text" name="nacionality" placeholder="Nacionalidade"><br>
-            <input type="text" name="CEP" placeholder="CEP"><br>
+            <input type="text" name="cep" placeholder="CEP"><br>
             <input type="text" name="state" placeholder="Estado"><br>
             <input type="text" name="city" placeholder="Cidade"><br>
             <input type="text" name="district" placeholder="Distrito"><br>
-            <input type="number" value="Numero" placeholder="Número"><br>
+            <input type="text" name="street" placeholder="Rua"><br>
+            <input type="number" name="number" value="Numero" placeholder="Número"><br>
             <input type="text" name="complement" placeholder="Complemento"><br>
-            <input type="number" value="CPF" placeholder="CPF"><br>
+            <input type="text" name="cpf" placeholder="CPF"><br>
         </div>
 
         <div id="contatos">
-            <input type="text" name="telephone1" placeholder="1° Telefone"><br>
-            <input type="text" name="telephone2" placeholder="2° Telefone"><br>
+            <input type="text" name="tel1" placeholder="1° Telefone"><br>
+            <input type="text" name="tel2" placeholder="2° Telefone"><br>
             <input type="text" name="cel1" placeholder="1° Celular"><br>
             <input type="text" name="cel2" placeholder="2° Celular"><br>
             <input type="text" name="email1" placeholder="1° E-mail"><br>
