--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -24,7 +24,7 @@
             <input type="text" name="cep" placeholder="CEP"><br>
             <input type="text" name="state" placeholder="Estado"><br>
             <input type="text" name="city" placeholder="Cidade"><br>
-            <input type="text" name="district" placeholder="Distrito"><br>
+            <input type="text" name="district" placeholder="Bairro"><br>
             <input type="text" name="street" placeholder="Rua"><br>
             <input type="number" name="number" value="Numero" placeholder="Número"><br>
             <input type="text" name="complement" placeholder="Complemento"><br>
