Página de login

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,8 @@
     <form name="loginform" method="POST" action="../backend/auth.php">
         <div id="caixa">
              <br><h1>Faça seu login na Avivah</h1><br>
-            <input type="text" placeholder="Usuário" name="user"><br>
-            <input type="password" placeholder="Senha" name="password"><br><br>
+            <input type="text" placeholder="Usuário" name="user" required><br>
+            <input type="password" placeholder="Senha" name="password" required><br><br>
             <input type="submit" value="Enviar"><br><br>
             <a id="linkcadastro" href="cadastro.html">Deseja <strong>cadastrar-se</strong>?</a>
         </div>
