--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -2,8 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/stylecad.css">
+    <link rel="stylesheet" href="css/estilo2.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Cadastro Avivah</title>
 </head>
 <body>
@@ -11,42 +12,52 @@
     <form method="POST" action="../backend/register.php">
         <h1>Cadastro Avivah</h1>
         <div id="pessoal">
-            <input type="text" name="name" placeholder="Nome" required> 
-            <input type="radio" value="Masculino" id="Masculino" name="sexo"><label for = "Masculino">Masculino</label>
+            <input type="text" name="name" placeholder="Nome" maxlength="80" required> <br><br>
+            <input type="text" name="name" placeholder="Nome" maxlength="80" autocomplete="off" required> <br><br>
+            <input type="radio" value="Masculino" id="Masculino" name="sexo" ><label for = "Masculino">Masculino</label>
             <input type="radio" value="Feminino" id="Feminino" name="sexo"><label for="Feminino">Feminino</label>
-            <input type="radio" value="Outro" id="Outro" name="sexo"><label for = "Outro">Outro</label>
+            <input type="radio" value="Outro" id="Outro" name="sexo"><label for = "Outro">Outro</label><br>
             <input type="date" name="nascimento" value="Data de Nascimento" required><br>
-            <input type="text" name="nacionality" placeholder="Nacionalidade" required><br>
-            <input type="text" name="cpf" placeholder="CPF" required><br>
+            <input type="text" name="cpf" placeholder="CPF" maxlength="15" required><br>
+            <input type="text" name="cpf" placeholder="CPF" maxlength="15" autocomplete="off" required><br>
         </div>    
 
         <div id="enderecos">
-            <input type="text" name="cep" placeholder="CEP" required><br>
-            <input type="text" name="state" placeholder="Estado" required><br>
-            <input type="text" name="city" placeholder="Cidade" required><br>
-            <input type="text" name="district" placeholder="Bairro" required><br>
-            <input type="text" name="street" placeholder="Rua" required><br>
-            <input type="number" name="number" placeholder="Número" required><br>
-            <input type="text" name="complement" placeholder="Complemento"><br>
+            <input type="text" name="cep" placeholder="CEP" maxlength="8" required><br>
+            <input type="text" name="state" placeholder="Estado" maxlength="80" required><br>
+            <input type="text" name="city" placeholder="Cidade" maxlength="80" required><br>
+            <input type="text" name="district" placeholder="Bairro" maxlength="80" required><br>
+            <input type="text" name="street" placeholder="Rua" maxlength="80" required><br>
+            <input type="number" name="number" placeholder="Número" maxlength="6" required><br>
+            <input type="text" name="complement" placeholder="Complemento" maxlength="260"><br>
         </div>
 
         <div id="contatos">
-            <input type="text" name="tel1" placeholder="1° Telefone"><br>
-            <input type="text" name="tel2" placeholder="2° Telefone"><br>
-            <input type="text" name="cel1" placeholder="1° Celular" required><br>
-            <input type="text" name="cel2" placeholder="2° Celular"><br>
-            <input type="text" name="email1" placeholder="1° E-mail" required><br>
-            <input type="text" name="email2" placeholder="2° E-mail"><br>
+            <input type="text" name="tel1" placeholder="1° Telefone" maxlength="12"><br>
+            <input type="text" name="tel2" placeholder="2° Telefone" maxlength="12"><br>
+            <input type="text" name="cel1" placeholder="1° Celular" maxlength="13" required><br>
+            <input type="text" name="cel2" placeholder="2° Celular" maxlength="13"><br>
+            <input type="email" name="email1" placeholder="1° E-mail" maxlength="100"required><br>
+            <input type="email" name="email2" placeholder="2° E-mail" maxlength="100"><br>
+            <input type="text" name="tel1" placeholder="1° Telefone" maxlength="12" autocomplete="off"><br>
+            <input type="text" name="tel2" placeholder="2° Telefone" maxlength="12" autocomplete="off"><br>
+            <input type="text" name="cel1" placeholder="1° Celular" maxlength="13" autocomplete="off" required><br>
+            <input type="text" name="cel2" placeholder="2° Celular" maxlength="13" autocomplete="off"><br>
+            <input type="email" name="email1" placeholder="1° E-mail" maxlength="100" autocomplete="off" required><br>
+            <input type="email" name="email2" placeholder="2° E-mail" maxlength="100" autocomplete="off"><br>
         </div>
 
         <div>
             <input type="text" name="user" placeholder="Login" required><br>
             <input type="password" name="password" placeholder="Senha" required><br>
+            <input type="text" name="user" placeholder="Login" autocomplete="off" required><br>
+            <input type="password" name="password" placeholder="Senha" autocomplete="off" required><br>
         </div>
 
         <input type="submit" value="Cadastrar" name="cadastrar">
-
     </form>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
