--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Cadastro Avivah</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
@@ -41,7 +43,9 @@
             <input type="password" name="password" placeholder="Senha" autocomplete="off" required><br>
         </div>
 
-        <input type="submit" value="Cadastrar" name="cadastrar">
+        <button class="btn waves-effect waves-light" type="submit" value="Cadastrar" name="cadastrar">Cadastrar
+        <i class="material-icons right">send</i>
+        </button>
 
     </form>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
