--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -54,7 +54,7 @@
                                 <label class="active" for="last_name">Last Name</label>
                             </div>
                         <div class="input-field col s4">
-                            <input name="cpf" id="cpf" type="number" class="validate" required autocomplete="off" maxlength="15">
+                            <input name="cpf" id="cpf" type="text" class="validate" required autocomplete="off" maxlength="15">
                             <label class="active" for="cpf">CPF</label>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                 
                     <div class="row">
                             <div class="input-field col s4">
-                                <input id="cep" type="number" class="validate" required autocomplete="off" maxlength="9">
+                                <input id="cep" type="text" class="validate" required autocomplete="off" maxlength="9">
                                 <label class="active" for="cep">CEP</label>
                             </div>
                             <div class="input-field col s4">
@@ -129,22 +129,22 @@
                     <div class="row">
                         <div class="input-field col s6 l6">
                             <i class="material-icons prefix">call</i>
-                            <input name="phone" id="phone" type="number" class="validate" required autocomplete="off" maxlength="14">
+                            <input name="phone" id="phone" type="text" class="validate" required autocomplete="off" maxlength="14">
                             <label class="active" for="phone">Phone</label>
                         </div>
                         <div class="input-field col s6 l6">
                             <i class="material-icons prefix">call</i>
-                            <input name="second_phone" id="second_phone" type="number" class="validate" required autocomplete="off" maxlength="14">
+                            <input name="second_phone" id="second_phone" type="text" class="validate" required autocomplete="off" maxlength="14">
                             <label class="active" for="second_phone">Secondary Phone</label>
                         </div>
                         <div class="input-field col s6 l6">
                             <i class="material-icons prefix">stay_current_portrait</i>
-                            <input name="mobile" id="mobile" type="number" class="validate" required autocomplete="off" maxlength="15">
+                            <input name="mobile" id="mobile" type="text" class="validate" required autocomplete="off" maxlength="15">
                             <label class="active" for="mobile">Mobile</label>
                         </div>
                         <div class="input-field col s6 l6">
                              <i class="material-icons prefix">stay_current_portrait</i>
-                            <input name="second_mobile" id="second_mobile" type="number" class="validate" required autocomplete="off" maxlength="15">
+                            <input name="second_mobile" id="second_mobile" type="text" class="validate" required autocomplete="off" maxlength="15">
                             <label class="active" for="second_mobile">Secondary Mobile</label>
                         </div>
                         <div class="input-field col s6">
@@ -190,6 +190,17 @@
         $(document).ready(function(){
             $('.sidenav').sidenav();
         });
+        </script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.js"></script>
+        <script>
+            $(document).ready (function() {
+                $("#cpf").mask('000.000.000-00');
+                $("#cep").mask('00000-000');
+                $("#phone").mask('(00) 0000-0000');
+                $("#second_phone").mask('(00) 0000-0000');
+                $("#mobile").mask('(00) 00000-0000');
+                $("#second_mobile").mask('(00) 00000-0000');
+            });
         </script>
     </body>
 </html>
