--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -48,22 +48,22 @@
                         <div class="row">
                                 <div class="input-field col s4">
                                     <input name="first_name" id="first_name" type="text" class="validate" required maxlength="80" autocomplete="off">
-                                    <label class="active" for="first_name">First Name</label>
+                                    <label class="active" for="first_name">First Name*</label>
                                 </div>
                                 <div class="input-field col s4">
                                     <input name="last_name" id="last_name" type="text" class="validate" required maxlength="80" autocomplete="off">
-                                    <label class="active" for="last_name">Last Name</label>
+                                    <label class="active" for="last_name">Last Name*</label>
                                 </div>
                             <div class="input-field col s4">
                                 <input name="cpf" id="cpf" type="text" class="validate" required autocomplete="off" maxlength="15">
-                                <label class="active" for="cpf">CPF</label>
+                                <label class="active" for="cpf">CPF*</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s6">
                                 <i class="material-icons prefix">cake</i>
                                 <input name="birth" id="birth" type="date" class="validate" required>
-                                <label class="active" for="birth">Birth Date</label>
+                                <label class="active" for="birth">Birth Date*</label>
                             </div>
                             <div class="input-field col s6">
                                 
@@ -93,30 +93,30 @@
                         <div class="row">
                                 <div class="input-field col s4">
                                     <input name="cep" id="cep" type="text" class="validate" required autocomplete="off" maxlength="9">
-                                    <label class="active" for="cep">CEP</label>
+                                    <label class="active" for="cep">CEP*</label>
                                 </div>
                                 <div class="input-field col s4">
                                     <input name="state" id="uf" type="text" class="validate" required autocomplete="off" maxlength="2">
-                                    <label class="active" for="uf">UF</label>
+                                    <label class="active" for="uf">UF*</label>
                                 </div>
                             <div class="input-field col s4">
                                 <input name="city" id="city" type="text" class="validate" required autocomplete="off" maxlength="50">
-                                <label class="active" for="city">City</label>
+                                <label class="active" for="city">City*</label>
                             </div>
                             <div class="input-field col s6 l3">
                                     <input name="neighborhood" id="neighborhood" type="text" class="validate" required autocomplete="off" maxlength="80">
-                                    <label class="active" for="neighborhood">Neighborhood</label>
+                                    <label class="active" for="neighborhood">Neighborhood*</label>
                                 </div>
                                 <div class="input-field col s6 l3">
                                     <input name="street" id="street" type="text" class="validate" required autocomplete="off" maxlength="80">
-                                    <label class="active" for="street">Street</label>
+                                    <label class="active" for="street">Street*</label>
                                 </div>
                             <div class="input-field col s6 l3">
                                 <input name="number" id="number" type="number" class="validate" required autocomplete="off" maxlength="5">
-                                <label class="active" for="number">Number</label>
+                                <label class="active" for="number">Number*</label>
                             </div>
                             <div class="input-field col s6 l3">
-                                <input name="complement" id="complement" type="text" class="validate" required autocomplete="off" maxlength="30">
+                                <input name="complement" id="complement" type="text" class="validate" autocomplete="off" maxlength="30">
                                 <label class="active" for="complement">Complement</label>
                             </div>
                     </div>
@@ -130,32 +130,32 @@
                         <div class="row">
                             <div class="input-field col s6 l6">
                                 <i class="material-icons prefix">call</i>
-                                <input name="tel1" id="phone" type="text" class="validate" required autocomplete="off" maxlength="14">
+                                <input name="tel1" id="phone" type="text" class="validate" autocomplete="off" maxlength="14">
                                 <label class="active" for="phone">Phone</label>
                             </div>
                             <div class="input-field col s6 l6">
                                 <i class="material-icons prefix">call</i>
-                                <input name="tel2" id="second_phone" type="text" class="validate" required autocomplete="off" maxlength="14">
+                                <input name="tel2" id="second_phone" type="text" class="validate" autocomplete="off" maxlength="14">
                                 <label class="active" for="second_phone">Secondary Phone</label>
                             </div>
                             <div class="input-field col s6 l6">
                                 <i class="material-icons prefix">stay_current_portrait</i>
                                 <input name="cel1" id="mobile" type="text" class="validate" required autocomplete="off" maxlength="15">
-                                <label class="active" for="mobile">Mobile</label>
+                                <label class="active" for="mobile">Mobile*</label>
                             </div>
                             <div class="input-field col s6 l6">
                                 <i class="material-icons prefix">stay_current_portrait</i>
-                                <input name="cel2" id="second_mobile" type="text" class="validate" required autocomplete="off" maxlength="15">
+                                <input name="cel2" id="second_mobile" type="text" class="validate" autocomplete="off" maxlength="15">
                                 <label class="active" for="second_mobile">Secondary Mobile</label>
                             </div>
                             <div class="input-field col s6">
                                 <i class="material-icons prefix">email</i>
                                 <input name="email1" id="email" type="email" class="validate" required autocomplete="off" maxlength="80">
-                                <label class="active" for="email">Email</label>
+                                <label class="active" for="email">Email*</label>
                             </div>
                             <div class="input-field col s6">
                                 <i class="material-icons prefix">email</i>
-                                <input name="email2" id="second_email" type="email" class="validate" required autocomplete="off" maxlength="80">
+                                <input name="email2" id="second_email" type="email" class="validate" autocomplete="off" maxlength="80">
                                 <label class="active" for="second_email">Secondary Email</label>
                             </div>
                     </div>
@@ -169,12 +169,12 @@
                                 <div class="input-field col s12 l6">
                                     <i class="material-icons prefix">account_circle</i>
                                     <input name="user" id="login" type="text" class="validate" required autocomplete="off">
-                                    <label class="active" for="login">Login</label>
+                                    <label class="active" for="login">Login*</label>
                                 </div>
                                 <div class="input-field col s12 l6">
                                     <i class="material-icons prefix">vpn_key</i>
                                     <input name="password" id="password" type="password" class="validate" required autocomplete="off">
-                                    <label class="active" for="password">Password</label>
+                                    <label class="active" for="password">Password*</label>
                                 </div>
                         </div>
                     
@@ -183,8 +183,12 @@
                 <button name="submit" class="btn waves-effect waves-light indigo" type="submit" name="action">Submit
                     <i class="material-icons right">send</i>
                 </div>
+            </button>
             </form>
-                </button>
+            <footer class="page-footer white">
+                <div class="footer-copyright grey darken-4">
+                    <div class="container center-align">&copy; 2019 Avivah</div>
+                    </footer>
         <!-- Compiled and minified JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
